fix the visibility bug

--- a/pages/contact/style.css
+++ b/pages/contact/style.css
@@ -17,7 +17,8 @@
     border-radius: 11px;
 }
 .phone__input{
-    width: 300px !important;
+    width: 100% !important;
+    height: 68px !important;
     color: black;
     border-radius: 11px !important;
     height: 50px;
@@ -26,12 +27,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-
 }
 .phone__number_wrapper{
     margin-top: 20px;
-    width: 300px;
+    width: 533px;
+    height: 68px;
 }
 .iti{
     width: 100%;
@@ -46,7 +46,7 @@
     color: #495057;
 }
 .form-control {
-    width: 300px;
+    height: 68px !important;
     border-radius: 11px !important;
     z-index: 0 !important;
     border: 1px solid #A2A0A8;
@@ -61,7 +61,7 @@
     background-color: white;
     font-size: 14px;
     left: 20px;
-    top: 60px;
+    top: 80px;
     padding: 0px 8px;
     z-index: 1 !important;
 }
@@ -124,6 +124,7 @@
     background-color: #4263EA;
     color: white;
     width: 100%;
+    height: 60px;
 }
 .btn__link{
     width: 100%;
@@ -150,7 +151,7 @@
     width: 100% !important;
     color: black;
     border-radius: 11px !important;
-    height: 50px;
+    height: 68px;
     z-index: 0 !important;
     text-align: start;
     display: flex;
@@ -264,5 +265,8 @@
     }
     .dropdown__button_third div{
         margin-left: -180px;
+    }
+    .phone__number_wrapper{
+        width: 320px;
     }
 }
